@@ -1,3 +1,11 @@
+2012-05-30  Andrew John Hughes  <ahughes@redhat.com>
+
+	* Makefile.am:
+	(EXTRA_DIST): Add test/tapset.
+	(clean-tests): Add clean-jtreg-reports.
+	(clean-local): Remove clean-jtreg-reports.
+	(clean-jtreg): Remove test/jtreg if empty.
+
 2012-05-25  Andrew John Hughes  <ahughes@redhat.com>
 
 	* Makefile.am:
